--- a/Style.css
+++ b/Style.css
@@ -14,14 +14,14 @@
 }
 
 .topnav {
-    background-color: turquoise;
+    background-color: black;
     overflow: hidden;
 }
 
 .topnav a {
     float: left;
     display: block;
-    color: black;
+    color: turquoise;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
@@ -35,22 +35,43 @@ color: black;
 
 .topnav a.active {
     background-color: cadetblue;
-    color: rgb(119, 2, 119);
+    color: blue;
 }
 
 .topnav .icon {
     display: none;
 }
 
-body, html {
-    height: 100%;
+.card {
+  background: lightblue;
+  background-size: cover;
+  padding: 20px;
 }
 
-.home-img {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0,0, 0.5)), url(img/Cartoons.jpg);
-    height: 50%;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    position: relative;
+.card__img {
+  width: 100%;
+  height: 300px;
+  object-fit: contain;
+  position: fixed;
+}
+
+.content {
+  text-align: center;
+  position: absolute;
+  bottom: 0;
+  background: rgba(0, 0, 0, 0.85);
+  color: #f1f1f1;
+  width: 95%;
+  font-size: 30px;
+  padding: 15px;
+}
+
+#myBtn {
+  width: 150px;
+  font-size: 18px;
+  padding: 10px;
+  border: none;
+  background: #000;
+  color: #fff;
+  cursor: pointer;
 }
